Add html first structure of the site

--- a/index.html
+++ b/index.html
@@ -18,35 +18,77 @@
 </head>
 
 <body>
-  <header class="container">
-    <nav class="navbar navbar-expand-sm navbar-light bg-primary fixed-top">
-      <div class="container-fluid d-flex justify-content-between">
-        <a class="navbar-brand" href="#home">
-          <img src="#" alt="Dépression Post Partum" width="30" height="24" class="d-inline-block align-text-top">
-          Dépression Post Partum
-        </a>
-        <div class="collapse navbar-collapse">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a href="#presentations" class="nav-link">Présentations</a>
-            </li>
-            <li class="nav-item">
-              <a href="#definitions" class="nav-link">Définitions</a>
-            </li>
-            <li class="nav-item">
-              <a href="#testimonials" class="nav-link">Témoignages</a>
-            </li>
-            <li class="nav-item">
-              <a href="#forum" class="nav-link">Forum</a>
-            </li>
-            <li class="nav-item">
-              <a href="#contact" class="nav-link">Qui Contacter?</a>
-            </li>
-          </ul>
-        </div>
+  <div class="container">
+    <header class="d-flex flex-wrap justify-content-start py-3 mb-4 border-bottom">
+      <a href="#home" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32">
+          <use xlink:href="#DPP"></use>
+        </svg>
+        <span class="fs-4">Dépression Post Partum</span>
+      </a>
+
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="#home" class="nav-link active" aria-current="page">Home</a></li>
+        <li class="nav-item">
+          <a href="#presentations" class="nav-link">Présentations</a>
+        </li>
+        <li class="nav-item">
+          <a href="#definitions" class="nav-link">Définitions</a>
+        </li>
+        <li class="nav-item">
+          <a href="#testimonials" class="nav-link">Témoignages</a>
+        </li>
+        <li class="nav-item">
+          <a href="#forum" class="nav-link">Forum</a>
+        </li>
+        <li class="nav-item">
+          <a href="#contact" class="nav-link">Qui Contacter?</a>
+        </li>
+      </ul>
+    </header>
+  </div>
+
+  <main>
+    <section id="home">
+      <div class="container">
+        <div class="row">SECTION home</div>
       </div>
-    </nav>
-  </header>
+    </section>
+    <section id="presentations">
+      <div class="container">
+        <div class="row">SECTION presentations</div>
+      </div>
+    </section>
+    <section id="definitions">
+      <div class="container">
+        <div class="row">SECTION definitions</div>
+      </div>
+    </section>
+    <section id="testimonials">
+      <div class="container">
+        <div class="row">SECTION testimonials</div>
+      </div>
+    </section>
+    <section id="forum">
+      <div class="container">
+        <div class="row">SECTION forum</div>
+      </div>
+    </section>
+    <section id="contact">
+      <div class="container">
+        <div class="row">SECTION contact</div>
+      </div>
+    </section>
+  </main>
+
+  <div class="container">
+    <div class="row">
+      <footer class="d-flex flex-wrap align-content-end py-3 mb-4 border-top">
+        <p>&copy; HtCvHs 2021</p>
+        <a href=" mailto:le-post-partum@gmail.com">le-post-partum@gmail.com</a>
+      </footer>
+    </div>
+  </div>
 
 
 
