--- a/index.html
+++ b/index.html
@@ -82,12 +82,16 @@
   </main>
 
   <div class="container">
-    <div class="row">
-      <footer class="d-flex flex-wrap align-content-end py-3 mb-4 border-top">
-        <p>&copy; HtCvHs 2021</p>
-        <a href=" mailto:le-post-partum@gmail.com">le-post-partum@gmail.com</a>
-      </footer>
-    </div>
+
+    <footer class="border-top page-footer font-small blue">
+      <div class="footer-copyright text-center py-3">
+
+        <p>&copy; HtCvHs 2021:</p>
+        <a href="#contact" class="text-decoration-none">Nous contacter</a>
+
+      </div>
+    </footer>
+
   </div>
 
 
