Navbar finish with anchor and fixed top

--- a/index.html
+++ b/index.html
@@ -19,30 +19,31 @@
 
 <body>
   <div class="container">
-    <header class="d-flex flex-wrap justify-content-start py-3 mb-4 border-bottom">
-      <a href="#home" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+    <header class="d-flex flex-wrap justify-content-start py-3 mb-4 border-bottom fixed-top bg-primary bg-gradient">
+      <a href="#home"
+        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none  text-white active"
+        aria-current="page">
         <svg class="bi me-2" width="40" height="32">
-          <use xlink:href="#DPP"></use>
+          <use xlink:href="./assets/icons/DPP.svg"></use>
         </svg>
         <span class="fs-4">Dépression Post Partum</span>
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#home" class="nav-link active" aria-current="page">Home</a></li>
         <li class="nav-item">
-          <a href="#presentations" class="nav-link">Présentations</a>
+          <a href="#presentations" class="nav-link text-white">Présentations</a>
         </li>
         <li class="nav-item">
-          <a href="#definitions" class="nav-link">Définitions</a>
+          <a href="#definitions" class="nav-link text-white">Définitions</a>
         </li>
         <li class="nav-item">
-          <a href="#testimonials" class="nav-link">Témoignages</a>
+          <a href="#testimonials" class="nav-link text-white">Témoignages</a>
         </li>
         <li class="nav-item">
-          <a href="#forum" class="nav-link">Forum</a>
+          <a href="#forum" class="nav-link text-white">Forum</a>
         </li>
         <li class="nav-item">
-          <a href="#contact" class="nav-link">Qui Contacter?</a>
+          <a href="#contact" class="nav-link text-white">Qui Contacter?</a>
         </li>
       </ul>
     </header>
