--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
   <div class="container">
     <header class="d-flex flex-wrap justify-content-start py-3 mb-4 border-bottom fixed-top bg-primary bg-gradient">
+      <!-- TODO Insert svg logo and directory ./assets/icons/DPP.svg -->
       <a href="#home"
         class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none  text-white active"
         aria-current="page">
