--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
   <div class="container">
+    <!-- TODO responsiv and burger menu on small screen -->
     <header class="d-flex flex-wrap justify-content-start py-3 mb-4 border-bottom fixed-top bg-primary bg-gradient">
       <!-- TODO Insert svg logo and directory ./assets/icons/DPP.svg -->
       <a href="#home"
@@ -49,7 +50,7 @@
       </ul>
     </header>
   </div>
-
+  <!-- TODO main part -->
   <main>
     <section id="home">
       <div class="container">
@@ -84,8 +85,8 @@
   </main>
 
   <div class="container">
-
-    <footer class="border-top page-footer font-small blue">
+    <!-- TODO fixed at the end of the page -->
+    <footer class="border-top page-footer font-small blue fixed-bottom">
       <div class="footer-copyright text-center py-3">
 
         <p>&copy; HtCvHs 2021:</p>
@@ -97,7 +98,12 @@
   </div>
 
 
-
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+    crossorigin="anonymous"></script>
   <script src="/scriptDPP-Basic.js"></script>
 </body>
 
