--- a/index.html
+++ b/index.html
@@ -17,85 +17,182 @@
   <title>Dépression Post Partum -site Basic</title>
 </head>
 
-<body>
-  <div class="container">
-    <!-- TODO responsiv and burger menu on small screen -->
-    <header class="d-flex flex-wrap justify-content-start py-3 mb-4 border-bottom fixed-top bg-primary bg-gradient">
-      <!-- TODO Insert svg logo and directory ./assets/icons/DPP.svg -->
-      <a href="#home"
-        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none  text-white active"
-        aria-current="page">
-        <svg class="bi me-2" width="40" height="32">
-          <use xlink:href="./assets/icons/DPP.svg"></use>
-        </svg>
-        <span class="fs-4">Dépression Post Partum</span>
-      </a>
-
-      <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a href="#presentations" class="nav-link text-white">Présentations</a>
-        </li>
-        <li class="nav-item">
-          <a href="#definitions" class="nav-link text-white">Définitions</a>
-        </li>
-        <li class="nav-item">
-          <a href="#testimonials" class="nav-link text-white">Témoignages</a>
-        </li>
-        <li class="nav-item">
-          <a href="#forum" class="nav-link text-white">Forum</a>
-        </li>
-        <li class="nav-item">
-          <a href="#contact" class="nav-link text-white">Qui Contacter?</a>
-        </li>
-      </ul>
-    </header>
-  </div>
+<body class="container-fluid">
+  <!-- TODO responsiv and burger menu on small screen -->
+  <header class="navbar navbar-expand-md  justify-content-between fixed-top border-bottom navbar-light"
+    style="background-color: #e3f2fd;">
+    <!-- TODO Insert svg logo and directory ./assets/icons/DPP.svg -->
+    <!-- LOGO Part Start -->
+    <a href="#home" class=" navbar-brand d-flex align-items-center text-decoration-none text-primary active"
+      aria-current="page">
+      <svg class="bi me-2" width="40" height="32">
+        <use xlink:href="./assets/icons/DPP.svg"></use>
+      </svg>
+      <span class="fs-4">Dépression Post Partum</span>
+    </a>
+    <!-- LOGO Part End -->
+    <!-- Burger button Start -->
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-content">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbar-content">
+      <nav id="navbar-nav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="#presentations" class="nav-link text-info">Présentations</a>
+          </li>
+          <li class="nav-item">
+            <a href="#definitions" class="nav-link text-info">Définitions</a>
+          </li>
+          <li class="nav-item">
+            <a href="#testimonials" class="nav-link text-info">Témoignages</a>
+          </li>
+          <li class="nav-item">
+            <a href="#forum" class="nav-link text-info">Forum</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link text-info">Qui Contacter?</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <!-- Burger button End -->
+  </header>
   <!-- TODO main part -->
-  <main>
+  <main class="mt-4">
     <section id="home">
-      <div class="container">
-        <div class="row">SECTION home</div>
-      </div>
+      SECTION home
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolor voluptatem eveniet quia atque placeat!
+      Doloremque itaque ullam beatae? Eaque esse cum sapiente sit architecto similique odio voluptatum praesentium
+      officia fugit. Sapiente pariatur placeat quaerat? Vitae nisi exercitationem quisquam modi facilis harum similique
+      eligendi? Error ut aliquid totam voluptate neque nisi illum, itaque quos perspiciatis nobis facere officia harum
+      dolores dicta obcaecati, dolor repellendus qui animi perferendis delectus reprehenderit quidem nam impedit.
+      Laborum deserunt sit optio debitis, maxime nulla amet culpa quam asperiores quasi fugiat reprehenderit reiciendis
+      commodi cumque dolore, ipsum explicabo, odio tempore perspiciatis. Excepturi dolore sunt ut ipsam corrupti
+      accusamus esse architecto, similique dolor quasi, voluptates rerum eveniet earum tempore? Unde quos cum libero
+      perspiciatis quidem, corrupti dignissimos ipsum omnis asperiores officiis nobis accusamus quaerat, nam harum?
+      Dolor, magnam qui laborum rem quae aliquid voluptatem ex repudiandae officia placeat provident voluptates
+      consequatur est facere beatae cum? Corrupti porro a voluptatem harum ipsam eaque aperiam quia ex? Esse quasi
+      doloribus saepe omnis illo maiores repudiandae nam ut corporis est voluptatibus, perferendis cum minus illum quo!
+      Asperiores natus, dolorum ipsam aliquid beatae labore, molestias placeat iste soluta provident, doloremque hic
+      quos tenetur magni qui atque eveniet nesciunt. Minima facilis amet voluptatum quia officia labore obcaecati non
+      reprehenderit ullam quae voluptas, dolor alias atque. In minus harum, iste doloribus hic atque maxime velit
+      dolores expedita, impedit ab et debitis sunt. Quisquam aspernatur sed consequatur molestiae delectus iste incidunt
+      maxime doloribus, quibusdam quo minima cum fuga! Dolore, aliquid officia. Vero, rerum ab.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium maxime tenetur reprehenderit culpa, fuga
+      omnis, inventore nemo a sapiente provident enim dolorum voluptate totam ullam obcaecati suscipit. Excepturi iure
+      maxime voluptate tenetur necessitatibus autem quas cumque iste nobis esse. Delectus aut molestias pariatur dolor
+      magnam? Tempora commodi illum provident expedita accusantium deserunt, quo exercitationem nostrum suscipit. Dolor
+      sunt aliquid inventore aliquam explicabo! Nostrum sunt quae est, quo dolorum minima accusamus voluptatibus a.
+      Earum beatae voluptatum sint laborum blanditiis ratione, incidunt quia magni ea vel inventore voluptates, quos
+      praesentium consectetur dolor deleniti porro repudiandae ipsa ullam illum perspiciatis minima? Natus totam
+      deleniti consequatur ex! Nostrum exercitationem modi quas natus accusantium quo aliquid alias deserunt, expedita
+      possimus voluptate asperiores explicabo aut pariatur, quasi qui recusandae error voluptates consectetur fuga
+      atque. Nesciunt dolore in ut architecto aut accusamus corrupti earum sed mollitia. Labore eum perspiciatis earum,
+      deserunt tempora eligendi qui laudantium consequuntur! Praesentium voluptatem aut enim ducimus voluptate omnis,
+      reiciendis nobis et veritatis quasi exercitationem, voluptates natus quia laboriosam, deserunt ab soluta amet
+      autem molestias sed tempora eveniet. Quisquam architecto, aliquid, dignissimos ex commodi qui numquam sunt
+      repudiandae pariatur soluta deserunt consequuntur, laborum eveniet esse deleniti! Neque modi repellat rerum
+      praesentium laudantium aspernatur tempore provident maxime dicta ullam deserunt amet, ad suscipit facere a est
+      veniam nostrum accusamus quam corrupti! Laborum officiis exercitationem nemo blanditiis maiores voluptates qui
+      esse debitis magni sequi cumque quia iusto quod vero a necessitatibus dolorum, adipisci ad voluptas. Est modi illo
+      pariatur ea eius id tempore et at.
     </section>
-    <section id="presentations">
-      <div class="container">
-        <div class="row">SECTION presentations</div>
+    <section id="presentations" class="container-fluid" style="height: 100vh;">
+      <div class="row">
+        <h1>La Dépression Post Partum</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam facilis saepe adipisci ipsam possimus
+          voluptate laudantium ullam aspernatur voluptates nemo.</p>
+      </div>
+      <div class="row">
+        <aside id="man-pres-left" class="w-75 h-auto bg-primary mr-4">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit cum molestias amet sit commodi optio et
+          reiciendis exercitationem non, inventore impedit nobis ratione temporibus harum dolorum est ut! Itaque,
+          voluptas non rem iste officiis blanditiis repudiandae atque ad quas dolores iure inventore? Sit accusantium
+          tempora ex labore explicabo eligendi illum debitis aut repudiandae fugit culpa odio inventore veritatis,
+          voluptatibus, totam, mollitia rem rerum natus exercitationem repellat esse quis? Necessitatibus nihil vero
+          totam sit adipisci tempora consequuntur provident quam excepturi natus eligendi nostrum qui corrupti deleniti
+          deserunt eum reprehenderit sed est aut repellendus, consectetur id dolore voluptatum. Quisquam quas
+          necessitatibus corporis itaque nam. Autem, veniam facilis cumque quod placeat dolore quibusdam tempora amet,
+          repudiandae vero corporis omnis ex sapiente nam praesentium a quas architecto molestias laboriosam sunt
+          officia? Repellendus nemo vitae eaque ut enim corrupti. Minima error voluptatum, quia vitae expedita libero
+          recusandae similique voluptate! Nemo, architecto. Dolorum voluptates consequatur, aliquam rerum iusto, animi
+          esse ut rem similique nisi numquam possimus? Vero voluptate fugit eos. Ad quam veniam et odit molestiae?
+          Saepe, dicta! Sed ullam vero nostrum consequatur necessitatibus repellat. Incidunt, consectetur omnis nostrum
+          adipisci porro facere quasi enim illo, sequi alias aspernatur quo pariatur! Commodi laboriosam illum
+          aspernatur doloribus aliquam fuga quaerat corrupti! Excepturi distinctio, fuga perferendis quos, labore
+          voluptatibus voluptatem deleniti voluptas eligendi animi obcaecati fugiat nobis porro aliquid. Eaque, sunt
+          ipsam! Necessitatibus quo sed quaerat voluptates quidem ducimus placeat nulla facilis praesentium consequuntur
+          eius facere eaque adipisci provident vel neque voluptatibus alias odio repellendus, ab itaque. Corrupti error
+          nisi consequatur, quae tempore recusandae minus ut, beatae officiis facere vitae praesentium numquam
+          accusantium a sed ipsum. Quidem natus ipsam explicabo inventore est architecto illo. Eos magnam iusto
+          perspiciatis officiis impedit dolorum, voluptate debitis quod quidem mollitia laborum sequi quas? Magni aut
+          corrupti exercitationem quae quas? Commodi tempora fugiat debitis laudantium sint similique impedit dolores
+          molestias soluta, neque totam, quis repudiandae magni ad unde magnam! Deserunt, perspiciatis. Eligendi
+          necessitatibus at, aut quaerat eum hic est provident eos quasi quia? Sit voluptatum nihil officiis earum
+          voluptates eius tenetur hic corrupti veritatis commodi ratione debitis impedit obcaecati veniam, dignissimos
+          est! Error est sint, reprehenderit quidem fugiat consequuntur asperiores iste a accusamus ducimus. In magnam
+          earum rem iure incidunt possimus, ipsum natus facere quo quae, similique iusto, perspiciatis tenetur quos
+          deserunt vero amet voluptates? Ad nisi aspernatur explicabo nulla quae iure earum consequatur, eum nostrum
+          aperiam unde officiis. Nemo ullam deserunt consequatur saepe, commodi deleniti hic animi voluptas nostrum
+          nesciunt, maiores similique et quam. Totam odio numquam ab perspiciatis laborum cum alias a quos assumenda
+          dolorem. Mollitia veniam impedit recusandae temporibus praesentium numquam eos dolorum. Ex unde est eaque
+          vitae dolore dolores incidunt sed earum asperiores odio ratione iusto praesentium, optio vel exercitationem.
+          Veniam architecto eos, hic labore rerum odio quia quaerat suscipit officiis deserunt provident exercitationem!
+          Eaque quos pariatur accusamus sunt cupiditate magni dolor incidunt eos rerum delectus ullam quisquam maxime,
+          dolores mollitia maiores, illo totam ad aspernatur culpa asperiores omnis quia. Animi, enim. Numquam
+          asperiores sed ab eligendi inventore voluptatibus, enim excepturi aspernatur velit accusantium reiciendis
+          ratione impedit, a doloribus veritatis recusandae, magnam quidem nemo quae delectus soluta expedita! Eius
+          asperiores aperiam amet fuga repellendus nam nemo porro nesciunt eveniet quaerat quo accusantium, iure
+          doloremque ea saepe repellat quos delectus repudiandae voluptates dicta autem perferendis voluptatem ipsum.
+          Vel, ullam possimus voluptatibus eius blanditiis magnam, id quibusdam eos similique sint beatae? Nisi voluptas
+          odit laboriosam vero voluptate saepe nam sint maxime provident deleniti impedit architecto magni placeat
+          dolorem, tempora inventore blanditiis! Debitis sunt asperiores corporis enim fuga consequuntur obcaecati
+          voluptates quae laudantium inventore autem reiciendis consectetur dolore facilis vitae amet, iure cupiditate
+          dolorem dolor architecto? Itaque qui alias similique dolorem est voluptatem unde. Sed velit modi obcaecati
+          repellendus accusantium suscipit consectetur labore blanditiis iure excepturi unde dolorem earum mollitia
+          saepe animi, voluptate quae veritatis quaerat, dolores necessitatibus provident dolor odio nemo? Magni
+          assumenda eveniet itaque quam beatae, consequatur odit quis sequi debitis?
+        </aside>
+        <aside id="woman-pres-right" class="w-25 h-50 bg-info mt-auto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatem ut id in dolores. Consequuntur
+          non
+          natus dolorum incidunt, eligendi porro illum amet distinctio magnam ipsum accusamus quaerat saepe harum
+          culpa
+          aliquam dignissimos magni? Optio, fugit cum eligendi voluptates ex aliquid placeat iusto consequuntur
+          deserunt
+          accusamus ratione. Fugit minima nulla eveniet sit iusto vero modi eos animi natus officia itaque sunt ex
+          placeat, ipsam vitae quas soluta a aliquid amet voluptatem. Reiciendis ea optio repellat corporis distinctio
+          quisquam necessitatibus accusantium magni architecto sequi, impedit nihil praesentium eligendi explicabo
+          quasi
+          omnis, atque modi tempore fugit iusto alias tenetur excepturi. Molestias, vero!
+        </aside>
       </div>
     </section>
     <section id="definitions">
-      <div class="container">
-        <div class="row">SECTION definitions</div>
-      </div>
+      SECTION definitions
     </section>
     <section id="testimonials">
-      <div class="container">
-        <div class="row">SECTION testimonials</div>
-      </div>
+      SECTION testimonials
     </section>
     <section id="forum">
-      <div class="container">
-        <div class="row">SECTION forum</div>
-      </div>
+      SECTION forum
     </section>
     <section id="contact">
-      <div class="container">
-        <div class="row">SECTION contact</div>
-      </div>
+      SECTION contact
     </section>
   </main>
 
-  <div class="container">
-    <!-- TODO fixed at the end of the page -->
-    <footer class="border-top page-footer font-small blue fixed-bottom">
-      <div class="footer-copyright text-center py-3">
 
-        <p>&copy; HtCvHs 2021:</p>
-        <a href="#contact" class="text-decoration-none">Nous contacter</a>
+  <!-- TODO fixed at the end of the page -->
+  <footer class="border-top page-footer font-small blue fixed-bottom">
+    <div class="footer-copyright text-center py-3">
 
-      </div>
-    </footer>
+      <p>&copy; HtCvHs 2021:</p>
+      <a href="#contact" class="text-decoration-none">Nous contacter</a>
 
-  </div>
+    </div>
+  </footer>
 
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
