Add stucture section of home, img, blockquote

--- a/index.html
+++ b/index.html
@@ -59,9 +59,25 @@
     <!-- Burger button End -->
   </header>
   <!-- TODO main part -->
-  <main class="mt-4">
-    <section id="home">
+  <main>
+    <section id="home" class="container-fluid mb-4" style="height: 90vh;">
       SECTION home
+      <figure class="figure">
+        <img src="/assets/" alt="" class="img-fluid figure-img">
+        <figcaption class="figure-caption text-right">Légende img</figcaption>
+      </figure>
+      <!-- figure et figure-img (s/img):espace apr img  -->
+      <!-- img-fluid:meme largeur que conteneur ici section -->
+      <!-- img-thumbnail:bordure arrondie à l'img -->
+      <!-- rounded:coin arrondi -->
+      <!-- width="200" -->
+      <blockquote class="blockquote">
+        <p></p>
+        <footer class="bloquote-footer">
+          NOM
+          <cite>SRC quote</cite>
+        </footer>
+      </blockquote>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolor voluptatem eveniet quia atque placeat!
       Doloremque itaque ullam beatae? Eaque esse cum sapiente sit architecto similique odio voluptatum praesentium
       officia fugit. Sapiente pariatur placeat quaerat? Vitae nisi exercitationem quisquam modi facilis harum similique
@@ -79,33 +95,15 @@
       reprehenderit ullam quae voluptas, dolor alias atque. In minus harum, iste doloribus hic atque maxime velit
       dolores expedita, impedit ab et debitis sunt. Quisquam aspernatur sed consequatur molestiae delectus iste incidunt
       maxime doloribus, quibusdam quo minima cum fuga! Dolore, aliquid officia. Vero, rerum ab.
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium maxime tenetur reprehenderit culpa, fuga
-      omnis, inventore nemo a sapiente provident enim dolorum voluptate totam ullam obcaecati suscipit. Excepturi iure
-      maxime voluptate tenetur necessitatibus autem quas cumque iste nobis esse. Delectus aut molestias pariatur dolor
-      magnam? Tempora commodi illum provident expedita accusantium deserunt, quo exercitationem nostrum suscipit. Dolor
-      sunt aliquid inventore aliquam explicabo! Nostrum sunt quae est, quo dolorum minima accusamus voluptatibus a.
-      Earum beatae voluptatum sint laborum blanditiis ratione, incidunt quia magni ea vel inventore voluptates, quos
-      praesentium consectetur dolor deleniti porro repudiandae ipsa ullam illum perspiciatis minima? Natus totam
-      deleniti consequatur ex! Nostrum exercitationem modi quas natus accusantium quo aliquid alias deserunt, expedita
-      possimus voluptate asperiores explicabo aut pariatur, quasi qui recusandae error voluptates consectetur fuga
-      atque. Nesciunt dolore in ut architecto aut accusamus corrupti earum sed mollitia. Labore eum perspiciatis earum,
-      deserunt tempora eligendi qui laudantium consequuntur! Praesentium voluptatem aut enim ducimus voluptate omnis,
-      reiciendis nobis et veritatis quasi exercitationem, voluptates natus quia laboriosam, deserunt ab soluta amet
-      autem molestias sed tempora eveniet. Quisquam architecto, aliquid, dignissimos ex commodi qui numquam sunt
-      repudiandae pariatur soluta deserunt consequuntur, laborum eveniet esse deleniti! Neque modi repellat rerum
-      praesentium laudantium aspernatur tempore provident maxime dicta ullam deserunt amet, ad suscipit facere a est
-      veniam nostrum accusamus quam corrupti! Laborum officiis exercitationem nemo blanditiis maiores voluptates qui
-      esse debitis magni sequi cumque quia iusto quod vero a necessitatibus dolorum, adipisci ad voluptas. Est modi illo
-      pariatur ea eius id tempore et at.
     </section>
-    <section id="presentations" class="container-fluid" style="height: 100vh;">
+    <section id="presentations" class="container-fluid mb-4" style="height: 100vh;">
       <div class="row">
         <h1>La Dépression Post Partum</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam facilis saepe adipisci ipsam possimus
           voluptate laudantium ullam aspernatur voluptates nemo.</p>
       </div>
       <div class="row">
-        <aside id="man-pres-left" class="w-75 h-auto bg-primary mr-4">
+        <aside id="man-pres-left" class="w-75 h-auto bg-primary mx-3 p-3">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit cum molestias amet sit commodi optio et
           reiciendis exercitationem non, inventore impedit nobis ratione temporibus harum dolorum est ut! Itaque,
           voluptas non rem iste officiis blanditiis repudiandae atque ad quas dolores iure inventore? Sit accusantium
@@ -154,7 +152,7 @@
           saepe animi, voluptate quae veritatis quaerat, dolores necessitatibus provident dolor odio nemo? Magni
           assumenda eveniet itaque quam beatae, consequatur odit quis sequi debitis?
         </aside>
-        <aside id="woman-pres-right" class="w-25 h-50 bg-info mt-auto">
+        <aside id="woman-pres-right" class="w-25 h-50 bg-info mx-3 p-3">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatem ut id in dolores. Consequuntur
           non
           natus dolorum incidunt, eligendi porro illum amet distinctio magnam ipsum accusamus quaerat saepe harum
@@ -169,17 +167,73 @@
         </aside>
       </div>
     </section>
-    <section id="definitions">
-      SECTION definitions
+    <section id="definitions" class="container-fluid mb-3" style="height: 100vh;">
+      <h2>SECTION definitions</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
+        consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
+        velit repudiandae sapiente veniam reiciendis, et pariatur, harum libero nostrum alias consequatur quasi,
+        corporis vel non? Numquam magnam nulla beatae ad ipsa omnis natus dolorum nobis laborum sed consequatur impedit
+        doloribus tempora, ullam quisquam cum libero maiores expedita ab quis dolorem? Magni dolore consequatur commodi
+        nam itaque, inventore excepturi quo fuga! Autem accusantium maxime dolorum. Quia minus ducimus at maiores
+        asperiores odio perspiciatis ad dolorum, harum suscipit. Omnis ipsum saepe quasi consectetur delectus sequi
+        corrupti nemo illum, soluta blanditiis voluptas tempore nesciunt commodi a laborum at dignissimos ab quod,
+        vitae, labore quae. Alias repudiandae eos doloremque nisi facere blanditiis deserunt, eius est quia aut,
+        repellat eum laudantium perferendis eaque quidem placeat soluta cupiditate expedita nobis! Nobis recusandae
+        commodi quisquam, excepturi molestiae temporibus accusamus labore sit illum magnam debitis maiores in tempora
+        eaque deserunt. Vero aspernatur modi deleniti fugit impedit. Quas, officia aperiam! Velit dolores distinctio eum
+        soluta quam veniam doloremque provident aspernatur culpa dolor ipsa voluptatibus amet tenetur, quasi tempora
+        qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
-    <section id="testimonials">
-      SECTION testimonials
+    <section id="testimonials" class="container-fluid mb-3" style="height: 100vh;">
+      <h2>SECTION testimonials</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
+        consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
+        velit repudiandae sapiente veniam reiciendis, et pariatur, harum libero nostrum alias consequatur quasi,
+        corporis vel non? Numquam magnam nulla beatae ad ipsa omnis natus dolorum nobis laborum sed consequatur impedit
+        doloribus tempora, ullam quisquam cum libero maiores expedita ab quis dolorem? Magni dolore consequatur commodi
+        nam itaque, inventore excepturi quo fuga! Autem accusantium maxime dolorum. Quia minus ducimus at maiores
+        asperiores odio perspiciatis ad dolorum, harum suscipit. Omnis ipsum saepe quasi consectetur delectus sequi
+        corrupti nemo illum, soluta blanditiis voluptas tempore nesciunt commodi a laborum at dignissimos ab quod,
+        vitae, labore quae. Alias repudiandae eos doloremque nisi facere blanditiis deserunt, eius est quia aut,
+        repellat eum laudantium perferendis eaque quidem placeat soluta cupiditate expedita nobis! Nobis recusandae
+        commodi quisquam, excepturi molestiae temporibus accusamus labore sit illum magnam debitis maiores in tempora
+        eaque deserunt. Vero aspernatur modi deleniti fugit impedit. Quas, officia aperiam! Velit dolores distinctio eum
+        soluta quam veniam doloremque provident aspernatur culpa dolor ipsa voluptatibus amet tenetur, quasi tempora
+        qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
-    <section id="forum">
-      SECTION forum
+    <section id="forum" class="container-fluid mb-3" style="height: 100vh;">
+      <h2>SECTION forum</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
+        consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
+        velit repudiandae sapiente veniam reiciendis, et pariatur, harum libero nostrum alias consequatur quasi,
+        corporis vel non? Numquam magnam nulla beatae ad ipsa omnis natus dolorum nobis laborum sed consequatur impedit
+        doloribus tempora, ullam quisquam cum libero maiores expedita ab quis dolorem? Magni dolore consequatur commodi
+        nam itaque, inventore excepturi quo fuga! Autem accusantium maxime dolorum. Quia minus ducimus at maiores
+        asperiores odio perspiciatis ad dolorum, harum suscipit. Omnis ipsum saepe quasi consectetur delectus sequi
+        corrupti nemo illum, soluta blanditiis voluptas tempore nesciunt commodi a laborum at dignissimos ab quod,
+        vitae, labore quae. Alias repudiandae eos doloremque nisi facere blanditiis deserunt, eius est quia aut,
+        repellat eum laudantium perferendis eaque quidem placeat soluta cupiditate expedita nobis! Nobis recusandae
+        commodi quisquam, excepturi molestiae temporibus accusamus labore sit illum magnam debitis maiores in tempora
+        eaque deserunt. Vero aspernatur modi deleniti fugit impedit. Quas, officia aperiam! Velit dolores distinctio eum
+        soluta quam veniam doloremque provident aspernatur culpa dolor ipsa voluptatibus amet tenetur, quasi tempora
+        qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
-    <section id="contact">
-      SECTION contact
+    <section id="contact" class="container-fluid mb-3" style="height: 100vh;">
+      <h2>SECTION contact</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
+        consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
+        velit repudiandae sapiente veniam reiciendis, et pariatur, harum libero nostrum alias consequatur quasi,
+        corporis vel non? Numquam magnam nulla beatae ad ipsa omnis natus dolorum nobis laborum sed consequatur impedit
+        doloribus tempora, ullam quisquam cum libero maiores expedita ab quis dolorem? Magni dolore consequatur commodi
+        nam itaque, inventore excepturi quo fuga! Autem accusantium maxime dolorum. Quia minus ducimus at maiores
+        asperiores odio perspiciatis ad dolorum, harum suscipit. Omnis ipsum saepe quasi consectetur delectus sequi
+        corrupti nemo illum, soluta blanditiis voluptas tempore nesciunt commodi a laborum at dignissimos ab quod,
+        vitae, labore quae. Alias repudiandae eos doloremque nisi facere blanditiis deserunt, eius est quia aut,
+        repellat eum laudantium perferendis eaque quidem placeat soluta cupiditate expedita nobis! Nobis recusandae
+        commodi quisquam, excepturi molestiae temporibus accusamus labore sit illum magnam debitis maiores in tempora
+        eaque deserunt. Vero aspernatur modi deleniti fugit impedit. Quas, officia aperiam! Velit dolores distinctio eum
+        soluta quam veniam doloremque provident aspernatur culpa dolor ipsa voluptatibus amet tenetur, quasi tempora
+        qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
   </main>
 
