Add structure of article of presentation section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </a>
     <!-- LOGO Part End -->
     <!-- Burger button Start -->
+    <!-- TODO Add ScrollSpy in html and JS -->
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-content">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -59,8 +60,8 @@
     <!-- Burger button End -->
   </header>
   <!-- TODO main part -->
-  <main>
-    <section id="home" class="container-fluid mb-4" style="height: 90vh;">
+  <main class="container">
+    <section id="home" class="row container-fluid mb-3" style="height: 90vh;">
       SECTION home
       <figure class="figure">
         <img src="/assets/" alt="" class="img-fluid figure-img">
@@ -96,78 +97,96 @@
       dolores expedita, impedit ab et debitis sunt. Quisquam aspernatur sed consequatur molestiae delectus iste incidunt
       maxime doloribus, quibusdam quo minima cum fuga! Dolore, aliquid officia. Vero, rerum ab.
     </section>
-    <section id="presentations" class="container-fluid mb-4" style="height: 100vh;">
+    <!--End of Row Section-->
+    <section id="presentations" class="row container-fluid mb-3" style="height: 100vh;">
       <div class="row">
         <h1>La Dépression Post Partum</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam facilis saepe adipisci ipsam possimus
           voluptate laudantium ullam aspernatur voluptates nemo.</p>
       </div>
+      <!-- End of Row Intro -->
       <div class="row">
-        <aside id="man-pres-left" class="w-75 h-auto bg-primary mx-3 p-3">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit cum molestias amet sit commodi optio et
-          reiciendis exercitationem non, inventore impedit nobis ratione temporibus harum dolorum est ut! Itaque,
-          voluptas non rem iste officiis blanditiis repudiandae atque ad quas dolores iure inventore? Sit accusantium
-          tempora ex labore explicabo eligendi illum debitis aut repudiandae fugit culpa odio inventore veritatis,
-          voluptatibus, totam, mollitia rem rerum natus exercitationem repellat esse quis? Necessitatibus nihil vero
-          totam sit adipisci tempora consequuntur provident quam excepturi natus eligendi nostrum qui corrupti deleniti
-          deserunt eum reprehenderit sed est aut repellendus, consectetur id dolore voluptatum. Quisquam quas
-          necessitatibus corporis itaque nam. Autem, veniam facilis cumque quod placeat dolore quibusdam tempora amet,
-          repudiandae vero corporis omnis ex sapiente nam praesentium a quas architecto molestias laboriosam sunt
-          officia? Repellendus nemo vitae eaque ut enim corrupti. Minima error voluptatum, quia vitae expedita libero
-          recusandae similique voluptate! Nemo, architecto. Dolorum voluptates consequatur, aliquam rerum iusto, animi
-          esse ut rem similique nisi numquam possimus? Vero voluptate fugit eos. Ad quam veniam et odit molestiae?
-          Saepe, dicta! Sed ullam vero nostrum consequatur necessitatibus repellat. Incidunt, consectetur omnis nostrum
-          adipisci porro facere quasi enim illo, sequi alias aspernatur quo pariatur! Commodi laboriosam illum
-          aspernatur doloribus aliquam fuga quaerat corrupti! Excepturi distinctio, fuga perferendis quos, labore
-          voluptatibus voluptatem deleniti voluptas eligendi animi obcaecati fugiat nobis porro aliquid. Eaque, sunt
-          ipsam! Necessitatibus quo sed quaerat voluptates quidem ducimus placeat nulla facilis praesentium consequuntur
-          eius facere eaque adipisci provident vel neque voluptatibus alias odio repellendus, ab itaque. Corrupti error
-          nisi consequatur, quae tempore recusandae minus ut, beatae officiis facere vitae praesentium numquam
-          accusantium a sed ipsum. Quidem natus ipsam explicabo inventore est architecto illo. Eos magnam iusto
-          perspiciatis officiis impedit dolorum, voluptate debitis quod quidem mollitia laborum sequi quas? Magni aut
-          corrupti exercitationem quae quas? Commodi tempora fugiat debitis laudantium sint similique impedit dolores
-          molestias soluta, neque totam, quis repudiandae magni ad unde magnam! Deserunt, perspiciatis. Eligendi
-          necessitatibus at, aut quaerat eum hic est provident eos quasi quia? Sit voluptatum nihil officiis earum
-          voluptates eius tenetur hic corrupti veritatis commodi ratione debitis impedit obcaecati veniam, dignissimos
-          est! Error est sint, reprehenderit quidem fugiat consequuntur asperiores iste a accusamus ducimus. In magnam
-          earum rem iure incidunt possimus, ipsum natus facere quo quae, similique iusto, perspiciatis tenetur quos
-          deserunt vero amet voluptates? Ad nisi aspernatur explicabo nulla quae iure earum consequatur, eum nostrum
-          aperiam unde officiis. Nemo ullam deserunt consequatur saepe, commodi deleniti hic animi voluptas nostrum
-          nesciunt, maiores similique et quam. Totam odio numquam ab perspiciatis laborum cum alias a quos assumenda
-          dolorem. Mollitia veniam impedit recusandae temporibus praesentium numquam eos dolorum. Ex unde est eaque
-          vitae dolore dolores incidunt sed earum asperiores odio ratione iusto praesentium, optio vel exercitationem.
-          Veniam architecto eos, hic labore rerum odio quia quaerat suscipit officiis deserunt provident exercitationem!
-          Eaque quos pariatur accusamus sunt cupiditate magni dolor incidunt eos rerum delectus ullam quisquam maxime,
-          dolores mollitia maiores, illo totam ad aspernatur culpa asperiores omnis quia. Animi, enim. Numquam
-          asperiores sed ab eligendi inventore voluptatibus, enim excepturi aspernatur velit accusantium reiciendis
-          ratione impedit, a doloribus veritatis recusandae, magnam quidem nemo quae delectus soluta expedita! Eius
-          asperiores aperiam amet fuga repellendus nam nemo porro nesciunt eveniet quaerat quo accusantium, iure
-          doloremque ea saepe repellat quos delectus repudiandae voluptates dicta autem perferendis voluptatem ipsum.
-          Vel, ullam possimus voluptatibus eius blanditiis magnam, id quibusdam eos similique sint beatae? Nisi voluptas
-          odit laboriosam vero voluptate saepe nam sint maxime provident deleniti impedit architecto magni placeat
-          dolorem, tempora inventore blanditiis! Debitis sunt asperiores corporis enim fuga consequuntur obcaecati
-          voluptates quae laudantium inventore autem reiciendis consectetur dolore facilis vitae amet, iure cupiditate
-          dolorem dolor architecto? Itaque qui alias similique dolorem est voluptatem unde. Sed velit modi obcaecati
-          repellendus accusantium suscipit consectetur labore blanditiis iure excepturi unde dolorem earum mollitia
-          saepe animi, voluptate quae veritatis quaerat, dolores necessitatibus provident dolor odio nemo? Magni
-          assumenda eveniet itaque quam beatae, consequatur odit quis sequi debitis?
-        </aside>
-        <aside id="woman-pres-right" class="w-25 h-50 bg-info mx-3 p-3">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatem ut id in dolores. Consequuntur
-          non
-          natus dolorum incidunt, eligendi porro illum amet distinctio magnam ipsum accusamus quaerat saepe harum
-          culpa
-          aliquam dignissimos magni? Optio, fugit cum eligendi voluptates ex aliquid placeat iusto consequuntur
-          deserunt
-          accusamus ratione. Fugit minima nulla eveniet sit iusto vero modi eos animi natus officia itaque sunt ex
-          placeat, ipsam vitae quas soluta a aliquid amet voluptatem. Reiciendis ea optio repellat corporis distinctio
-          quisquam necessitatibus accusantium magni architecto sequi, impedit nihil praesentium eligendi explicabo
-          quasi
-          omnis, atque modi tempore fugit iusto alias tenetur excepturi. Molestias, vero!
-        </aside>
+        <article id="man-pres-left" class="col-5 bg-primary p-3">
+          <p> <strong>STRONG</strong><em>EM balise</em> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit
+            cum molestias amet sit commodi optio et
+            reiciendis exercitationem non, inventore impedit nobis ratione temporibus harum dolorum est ut! Itaque,
+            voluptas non rem iste officiis blanditiis repudiandae atque ad quas dolores iure inventore? Sit accusantium
+            tempora ex labore explicabo eligendi illum debitis aut repudiandae fugit culpa odio inventore veritatis,
+            voluptatibus, totam, mollitia rem rerum natus exercitationem repellat esse quis? Necessitatibus nihil vero
+            totam sit adipisci tempora consequuntur provident quam excepturi natus eligendi nostrum qui corrupti
+            deleniti
+            deserunt eum reprehenderit sed est aut repellendus, consectetur id dolore voluptatum. Quisquam quas
+            necessitatibus corporis itaque nam. Autem, veniam facilis cumque quod placeat dolore quibusdam tempora amet,
+            repudiandae vero corporis omnis ex sapiente nam praesentium a quas architecto molestias laboriosam sunt
+            officia? Repellendus nemo vitae eaque ut enim corrupti. Minima error voluptatum, quia vitae expedita libero
+            recusandae similique voluptate! Nemo, architecto. Dolorum voluptates consequatur, aliquam rerum iusto, animi
+            esse ut rem similique nisi numquam possimus? Vero voluptate fugit eos. Ad quam veniam et odit molestiae?
+            Saepe, dicta! Sed ullam vero nostrum consequatur necessitatibus repellat. Incidunt, consectetur omnis
+            nostrum
+            adipisci porro facere quasi enim illo, sequi alias aspernatur quo pariatur! Commodi laboriosam illum
+            aspernatur doloribus aliquam fuga quaerat corrupti! Excepturi distinctio, fuga perferendis quos, labore
+            voluptatibus voluptatem deleniti voluptas eligendi animi obcaecati fugiat nobis porro aliquid. Eaque, sunt
+            ipsam! Necessitatibus quo sed quaerat voluptates quidem ducimus placeat nulla facilis praesentium
+            consequuntur
+            eius facere eaque adipisci provident vel neque voluptatibus alias odio repellendus, ab itaque. Corrupti
+            error
+            nisi consequatur, quae tempore recusandae minus ut, beatae officiis facere vitae praesentium numquam
+            accusantium a sed ipsum. Quidem natus ipsam explicabo inventore est architecto illo. Eos magnam iusto
+            perspiciatis officiis impedit dolorum, voluptate debitis quod quidem mollitia laborum sequi quas? Magni aut
+            corrupti exercitationem quae quas? Commodi tempora fugiat debitis laudantium sint similique impedit dolores
+            molestias soluta, neque totam, quis repudiandae magni ad unde magnam! Deserunt, perspiciatis. Eligendi
+            necessitatibus at, aut quaerat eum hic est provident eos quasi quia? Sit voluptatum nihil officiis earum
+            voluptates eius tenetur hic corrupti veritatis commodi ratione debitis impedit obcaecati veniam, dignissimos
+            est! Error est sint, reprehenderit quidem fugiat consequuntur asperiores iste a accusamus ducimus. In magnam
+            earum rem iure incidunt possimus, ipsum natus facere quo quae, similique iusto, perspiciatis tenetur quos
+            deserunt vero amet voluptates? Ad nisi aspernatur explicabo nulla quae iure earum consequatur, eum nostrum
+            aperiam unde officiis. Nemo ullam deserunt consequatur saepe, commodi deleniti hic animi voluptas nostrum
+            nesciunt, maiores similique et quam. Totam odio numquam ab perspiciatis laborum cum alias a quos assumenda
+            dolorem. Mollitia veniam impedit recusandae temporibus praesentium numquam eos dolorum. Ex unde est eaque
+            vitae dolore dolores incidunt sed earum asperiores odio ratione iusto praesentium, optio vel exercitationem.
+            Veniam architecto eos, hic labore rerum odio quia quaerat suscipit officiis deserunt provident
+            exercitationem!
+            Eaque quos pariatur accusamus sunt cupiditate magni dolor incidunt eos rerum delectus ullam quisquam maxime,
+            dolores mollitia maiores, illo totam ad aspernatur culpa asperiores omnis quia. Animi, enim. Numquam
+            asperiores sed ab eligendi inventore voluptatibus, enim excepturi aspernatur velit accusantium reiciendis
+            ratione impedit, a doloribus veritatis recusandae, magnam quidem nemo quae delectus soluta expedita! Eius
+            asperiores aperiam amet fuga repellendus nam nemo porro nesciunt eveniet quaerat quo accusantium, iure
+            doloremque ea saepe repellat quos delectus repudiandae voluptates dicta autem perferendis voluptatem ipsum.
+            Vel, ullam possimus voluptatibus eius blanditiis magnam, id quibusdam eos similique sint beatae? Nisi
+            voluptas
+            odit laboriosam vero voluptate saepe nam sint maxime provident deleniti impedit architecto magni placeat
+            dolorem, tempora inventore blanditiis! Debitis sunt asperiores corporis enim fuga consequuntur obcaecati
+            voluptates quae laudantium inventore autem reiciendis consectetur dolore facilis vitae amet, iure cupiditate
+            dolorem dolor architecto? Itaque qui alias similique dolorem est voluptatem unde. Sed velit modi obcaecati
+            repellendus accusantium suscipit consectetur labore blanditiis iure excepturi unde dolorem earum mollitia
+            saepe animi, voluptate quae veritatis quaerat, dolores necessitatibus provident dolor odio nemo? Magni
+            assumenda eveniet itaque quam beatae, consequatur odit quis sequi debitis?</p>
+        </article>
+        <!--End of Col-5 Article Left-->
+        <article id="woman-pres-right" class="col-4 offset-3 bg-info p-3">
+          <p>
+            <strong>STRONG</strong>
+            <em>EM balise</em>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+            voluptatem ut id in dolores. Consequuntur
+            non
+            natus dolorum incidunt, eligendi porro illum amet distinctio magnam ipsum accusamus quaerat saepe harum
+            culpa
+            aliquam dignissimos magni? Optio, fugit cum eligendi voluptates ex aliquid placeat iusto consequuntur
+            deserunt
+            accusamus ratione. Fugit minima nulla eveniet sit iusto vero modi eos animi natus officia itaque sunt ex
+            placeat, ipsam vitae quas soluta a aliquid amet voluptatem. Reiciendis ea optio repellat corporis distinctio
+            quisquam necessitatibus accusantium magni architecto sequi, impedit nihil praesentium eligendi explicabo
+            quasi
+            omnis, atque modi tempore fugit iusto alias tenetur excepturi. Molestias, vero!
+          </p>
+        </article>
+        <!--End of col-4 with offset-3 Article Right-->
       </div>
+      <!--End of Row Article-->
     </section>
-    <section id="definitions" class="container-fluid mb-3" style="height: 100vh;">
+    <!--End of Row Section-->
+    <section id="definitions" class="row container-fluid mb-3" style="height: 100vh;">
       <h2>SECTION definitions</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
         consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
@@ -184,7 +203,8 @@
         soluta quam veniam doloremque provident aspernatur culpa dolor ipsa voluptatibus amet tenetur, quasi tempora
         qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
-    <section id="testimonials" class="container-fluid mb-3" style="height: 100vh;">
+    <!--End of Row Section-->
+    <section id="testimonials" class="row container-fluid mb-3" style="height: 100vh;">
       <h2>SECTION testimonials</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
         consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
@@ -201,7 +221,8 @@
         soluta quam veniam doloremque provident aspernatur culpa dolor ipsa voluptatibus amet tenetur, quasi tempora
         qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
-    <section id="forum" class="container-fluid mb-3" style="height: 100vh;">
+    <!--End of Row Section-->
+    <section id="forum" class="row container-fluid mb-3" style="height: 100vh;">
       <h2>SECTION forum</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
         consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
@@ -218,7 +239,8 @@
         soluta quam veniam doloremque provident aspernatur culpa dolor ipsa voluptatibus amet tenetur, quasi tempora
         qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
-    <section id="contact" class="container-fluid mb-3" style="height: 100vh;">
+    <!--End of Row Section-->
+    <section id="contact" class="row container-fluid mb-3" style="height: 100vh;">
       <h2>SECTION contact</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
         consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
@@ -235,10 +257,12 @@
         soluta quam veniam doloremque provident aspernatur culpa dolor ipsa voluptatibus amet tenetur, quasi tempora
         qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
+    <!--End of Row Section-->
   </main>
+  <!--End of Main Container-->
 
 
-  <!-- TODO fixed at the end of the page -->
+  <!-- TODO fixed at the end of the page or at the end of the section -->
   <footer class="border-top page-footer font-small blue fixed-bottom">
     <div class="footer-copyright text-center py-3">
 
