--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Link CSS -->
+  <!--  Stylesheet CSS -->
   <link rel="stylesheet" href="style.css">
-  <!-- Link Bootstrap  -->
+  <!--  Bootstrap CSS  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <!-- Link Fontawesome -->
+  <!--  Fontawesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css">
 
   <title>Dépression Post Partum -site Basic</title>
+
 </head>
 
 <body class="container-fluid">
@@ -23,7 +24,7 @@
     style="background-color: #e3f2fd;">
     <!-- TODO Insert svg logo and directory ./assets/icons/DPP.svg -->
     <!-- LOGO Part Start -->
-    <a href="#home" class=" navbar-brand d-flex align-items-center text-decoration-none text-primary active"
+    <a href="#home" class=" navbar-brand d-flex align-items-center text-decoration-none text-primary "
       aria-current="page">
       <svg class="bi me-2" width="40" height="32">
         <use xlink:href="./assets/icons/DPP.svg"></use>
@@ -37,21 +38,21 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbar-content">
-      <nav id="navbar-nav">
+      <nav id="navbar">
         <ul class="navbar-nav">
-          <li class="nav-item">
+          <li data-tabtitle="0" class="nav-item active">
             <a href="#presentations" class="nav-link text-info">Présentations</a>
           </li>
-          <li class="nav-item">
+          <li data-tabtitle="1" class="nav-item">
             <a href="#definitions" class="nav-link text-info">Définitions</a>
           </li>
-          <li class="nav-item">
+          <li data-tabtitle="2" class="nav-item">
             <a href="#testimonials" class="nav-link text-info">Témoignages</a>
           </li>
-          <li class="nav-item">
+          <li data-tabtitle="3" class="nav-item">
             <a href="#forum" class="nav-link text-info">Forum</a>
           </li>
-          <li class="nav-item">
+          <li data-tabtitle="4" class="nav-item">
             <a href="#contact" class="nav-link text-info">Qui Contacter?</a>
           </li>
         </ul>
@@ -61,10 +62,10 @@
   </header>
   <!-- TODO main part -->
   <main class="container">
-    <section id="home" class="row container-fluid mb-3" style="height: 90vh;">
+    <section id="home" class="row">
       SECTION home
       <figure class="figure">
-        <img src="/assets/" alt="" class="img-fluid figure-img">
+        <img src="#" alt="" class="img-fluid figure-img">
         <figcaption class="figure-caption text-right">Légende img</figcaption>
       </figure>
       <!-- figure et figure-img (s/img):espace apr img  -->
@@ -98,7 +99,7 @@
       maxime doloribus, quibusdam quo minima cum fuga! Dolore, aliquid officia. Vero, rerum ab.
     </section>
     <!--End of Row Section-->
-    <section id="presentations" class="row container-fluid mb-3" style="height: 100vh;">
+    <section id="tab0" class="row active">
       <div class="row">
         <h1>La Dépression Post Partum</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam facilis saepe adipisci ipsam possimus
@@ -186,7 +187,7 @@
       <!--End of Row Article-->
     </section>
     <!--End of Row Section-->
-    <section id="definitions" class="row container-fluid mb-3" style="height: 100vh;">
+    <section id="tab1" class="row">
       <h2>SECTION definitions</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
         consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
@@ -204,7 +205,7 @@
         qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
     <!--End of Row Section-->
-    <section id="testimonials" class="row container-fluid mb-3" style="height: 100vh;">
+    <section id="tab2" class="row">
       <h2>SECTION testimonials</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
         consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
@@ -222,7 +223,7 @@
         qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
     <!--End of Row Section-->
-    <section id="forum" class="row container-fluid mb-3" style="height: 100vh;">
+    <section id="tab3" class="row">
       <h2>SECTION forum</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
         consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
@@ -240,7 +241,7 @@
         qui, voluptates optio facilis dicta magnam neque iste id!</p>
     </section>
     <!--End of Row Section-->
-    <section id="contact" class="row container-fluid mb-3" style="height: 100vh;">
+    <section id="tab4" class="row">
       <h2>SECTION contact</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed veritatis odit quos atque dolor iste quas ratione
         consectetur. Ea maxime ipsum error cupiditate. Sed, ratione corporis! Enim sed asperiores officiis similique
@@ -263,7 +264,7 @@
 
 
   <!-- TODO fixed at the end of the page or at the end of the section -->
-  <footer class="border-top page-footer font-small blue fixed-bottom">
+  <footer class="border-top page-footer font-small blue">
     <div class="footer-copyright text-center py-3">
 
       <p>&copy; HtCvHs 2021:</p>
